@@ -9,8 +9,6 @@ Wyrd To-Do list
 * Add additional user-defined REMline templates, which can be
   activated via the 'bind' syntax.
 
-* Make 12/24 hour time configurable.
-
 * Add additional "new reminder" commands that provide a dialog for selecting
   which reminder file to use (possibly scanning INCLUDE lines to get this
   info).
