@@ -76,6 +76,10 @@ let busy_level3 = ref 6
 let busy_level4 = ref 8
 (* First day of the week? *)
 let week_starts_monday = ref false
+(* 12/24 hour time selection *)
+let schedule_12_hour  = ref false
+let selection_12_hour = ref true
+let status_12_hour    = ref true
 (* List of included rc files *)
 let included_rcfiles : (string list) ref = ref []
 
@@ -407,6 +411,12 @@ let parse_line line_stream =
          parse_set "busy_level4" busy_level4 int_of_string "Expected an integral string after "
       | [< 'Ident "week_starts_monday" >] ->
          parse_set "week_starts_monday" week_starts_monday bool_of_string "Expected a boolean string after "
+      | [< 'Ident "schedule_12_hour" >] ->
+         parse_set "schedule_12_hour" schedule_12_hour bool_of_string "Expected a boolean string after "
+      | [< 'Ident "selection_12_hour" >] ->
+         parse_set "selection_12_hour" selection_12_hour bool_of_string "Expected a boolean string after "
+      | [< 'Ident "status_12_hour" >] ->
+         parse_set "status_12_hour" status_12_hour bool_of_string "Expected a boolean string after "
       | [< >] ->
          config_failwith ("Unmatched variable name after \"set\"")
       end
