@@ -3,6 +3,9 @@ Wyrd ChangeLog
 
 2005-04-25     Made colors configurable via the rcfile.
 
+               Made time representation (12/24 hour) configurable via the
+               rcfile.
+
                Added a resize handler.
 
 2005-04-23     Added a configuration variable to switch the first day of the
